--- a/demos/card_rendering/style.css
+++ b/demos/card_rendering/style.css
@@ -47,29 +47,6 @@ canvas#my-canvas {
   border-color: black;
 }
 
-#during_game_btn {
-  text-align: center;
-  position: absolute;
-  top: 1.5%;
-  right: 2%;
-  width: 10%;
-  height: 5%;
-  font-size: 150%;
-  font-weight: 600;
-  border: solid;
-  background-color: #b95828;
-  color: black;
-  border-radius: 50px;
-  cursor: pointer;
-  z-index: 0;
-  box-shadow: 10px 10px 20px black;
-}
-
-#during_game_btn:hover {
-  color: #f3e45f;
-  border-color: black;
-}
-
 .win_subtitle {
   text-align: center;
   position: absolute;
@@ -86,29 +63,6 @@ canvas#my-canvas {
   z-index: 2;
 }
 
-.rules_btn {
-  text-align: center;
-  position: absolute;
-  top: 7.5%;
-  right: 2%;
-  width: 10%;
-  height: 5%;
-  font-size: 150%;
-  font-weight: 600;
-  border: solid;
-  background-color: #b95828;
-  color: black;
-  border-radius: 50px;
-  cursor: pointer;
-  z-index: 0;
-  box-shadow: 10px 10px 20px black;
-}
-
-.rules_btn:hover {
-  color: #f3e45f;
-  border-color: black;
-}
-
 .rules {
   position: absolute;
   padding: 1%;
@@ -122,6 +76,7 @@ canvas#my-canvas {
   background-color: #b95828;
   color: black;
   border-radius: 50px;
+  overflow: auto;
   z-index: 1;
 }
 
@@ -130,11 +85,30 @@ canvas#my-canvas {
   font-size: 40;
   font-weight: 600;
   text-align: center;
-  text-decoration-line: underline;
   text-shadow: 3px 3px 3px black;
 }
 
 p {
-  text-decoration-line: underline;
   color: #f3e45f;
+  text-decoration-line: underline;
+  text-shadow: 3px 3px 3px black;
+}
+
+.rules::-webkit-scrollbar-track
+{
+	border-radius: 10px;
+	background-color: #B95828;
+}
+
+.rules::-webkit-scrollbar
+{
+	width: 12px;
+  height: 100px;
+	background-color: #B95828;
+}
+
+.rules::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-color: #612000;
 }
