--- a/demos/card_rendering/style.css
+++ b/demos/card_rendering/style.css
@@ -51,8 +51,8 @@ canvas#my-canvas {
   text-align: center;
   position: absolute;
   top: 30%;
-  right: 31%;
-  width: 30%;
+  right: 26%;
+  width: 40%;
   font-size: 300%;
   font-weight: 600;
   padding: 2% 4%;
@@ -65,19 +65,28 @@ canvas#my-canvas {
 
 .rules {
   position: absolute;
-  padding: 1%;
   top: 5%;
-  right: 20%;
   width: 60%;
   height: 80%;
-  font-size: 170%;
+  right: 20%;
+  font-size: 160%;
   font-weight: 600;
-  border: solid;
-  background-color: #b95828;
-  color: black;
-  border-radius: 50px;
+  border-radius: 10px;
+  border: 2px solid;
+  padding-top: 10px;
+  padding-right: 1px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  background: #b95828;
   overflow: auto;
   z-index: 1;
+}
+
+.inner_box_of_rules {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  border-radius: 8px;
 }
 
 .rule_title {
@@ -94,21 +103,17 @@ p {
   text-shadow: 3px 3px 3px black;
 }
 
-.rules::-webkit-scrollbar-track
-{
-	border-radius: 10px;
-	background-color: #B95828;
+.inner_box_of_rules::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #b95828;
 }
 
-.rules::-webkit-scrollbar
-{
-	width: 12px;
-  height: 100px;
-	background-color: #B95828;
+.inner_box_of_rules::-webkit-scrollbar {
+  width: 10px;
+  background-color: #b95828;
 }
 
-.rules::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	background-color: #612000;
+.inner_box_of_rules::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #612000;
 }
