--- a/demos/card_rendering/style.css
+++ b/demos/card_rendering/style.css
@@ -46,25 +46,31 @@ button:hover {
 
 #human_vs_AI_btn {
   font-size: 200%;
-  top: 50%;
-  right: 40.5%;
-  width: 20%;
-  height: 10%;
+  top: 59%;
+  right: 36.5%;
+  padding: 5px;
 }
 
 #human_vs_human_btn {
   font-size: 200%;
-  top: 65%;
-  right: 40.5%;
-  width: 20%;
-  height: 10%;
+  top: 70%;
+  right: 39.5%;
+  padding: 5px;
 }
 
 #end_screen_btn {
   top: 70%;
-  right: 41%;
-  width: 20%;
-  height: 10%;
+  right: 44%;
+  font-size: 250%;
+  padding: 10px;
+}
+
+#second_player{
+  right: 24%;
+}
+
+#first_player{
+  right: 24%;
 }
 
 .subtitle {
@@ -72,7 +78,6 @@ button:hover {
   position: absolute;
   top: 30%;
   right: 26%;
-  width: 40%;
   font-size: 300%;
   font-weight: 600;
   padding: 2% 4%;
@@ -86,8 +91,7 @@ button:hover {
 #select_players {
   font-size: 400%;
   top: 20%;
-  right: 26%;
-  width: 40%;
+  right: 20%;
 }
 
 .rules {
@@ -148,9 +152,8 @@ p {
 .message {
   text-align: center;
   position: absolute;
-  top: 30%;
-  right: 26%;
-  width: 40%;
+  top: 42%;
+  right: 14.5%;
   font-size: 300%;
   font-weight: 600;
   padding: 2% 4%;
